--- a/index.html
+++ b/index.html
@@ -1,31 +1,31 @@
 <!DOCTYPE html>
 <html lang="en">
 
-<head> 
-    <script>
+<head>
+    <script src="game.js">
         var bear;
         var bees;
         var updateTimer;
         var lastStingTime;
-    </script>        
-    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-    <title>JavaScript and DOM API</title>
-    <link rel="stylesheet" type="text/css" href="games.css" media="all" />
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <script src="games.js"></script> 
+        var firstmove;
+    </script>
     <noscript>
         Warning - JavaScript is Disabled.
         For full functionality of this page, it is necessary to enable JavaScript.
     </noscript>
-</head>
-    <body>
-        <body onload="start();">
+    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+    <title>JavaScript and DOM API</title>
+    <link rel="stylesheet" type="text/css" href="game.css" media="all" />
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <body onload="start();">
+
         <div id="title">
             <h1>Help the bear escape the bees !</h1>
-            <p>Bear tries to avoid being stung by <input type="text" id="nbBees" value="1" size="3"> bees by running and jumping. The objective is to have as less stings as possible!</p>
-            <p>You can ajust bees' speed <input type="text" id="speedBees" value="50" size="3"> px/ms
-                <br> and the refresh period <input type="text" id="periodTimer" value="10" size="3"> ms </p>
-            <p>bear speed <input type="text" id="speedBear" value="100" size="3"></p>
+            <p>Bear tries to avoid being stung by <input type="text" id="nbBees" value="3" size="3"> bees by running and jumping. The objective is to have as less stings as possible!</p>
+            <p>You can adjust bears' speed <input type="text" id="speedBear" value="50" size="3"> px/ms</p>
+            <p>You can adjust bees' speed <input type="text" id="speedBees" value="10" size="3"> px/ms
+                <br><br> and the refresh period <input type="text" id="periodTimer" value="10" size="3"> ms </p>
+            <p>RESTART GAME: <button onclick="restart()">RESTART</button></p>
             <h2>Press left, right, up, down keys to move the bear</h2>
 
         </div>
@@ -36,14 +36,15 @@
                         <p>Stings: [<span id="hits">0</span>]</p>
                     </td>
                     <td>
-                        <p>Best duration: [<span id="duration">?</span>]</p>
+                        <p>Best duration: [<span id="duration">0</span>]</p>
                     </td>
                 </tr>
             </table>
 
         </div>
         <div id="board">
-            <img src="./images/bear.gif" id="bear" alt="bear">
+            <img src="https://raw.githubusercontent.com/hbatatia/lab02-dom-resources/main/images/bear.gif" id="bear" alt="bear">
+            
         </div>
     </body>
 
